--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,29 @@
-<h1>Loja Virtual</h1>
-<hr/>
-<router-outlet></router-outlet>
-<hr/>
-<footer>Desenvolvimento no curso de Angular 🚀- 2019</footer>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" [routerLink]="['/']">Loja Virtual</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a [routerLink]="['/']">Home</a></li>                
+                <li><a [routerLink]="['/catalogo/produtos']">Produtos</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
+
+<div class="container">
+    <router-outlet></router-outlet>  
+</div>
+
+<footer class="footer">
+    <p class="text-center">Desenvolvimento no curso de Angular 🚀- 2019</p>
+</footer>
