--- a/src/app/catalogo/lista-produtos/lista-produtos.component.html
+++ b/src/app/catalogo/lista-produtos/lista-produtos.component.html
@@ -1,4 +1,5 @@
-<table class="table">
+<h3>Lista de Produtos</h3>
+<table class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>Id</th>
