--- a/src/app/catalogo/lista-produtos/lista-produtos.component.html
+++ b/src/app/catalogo/lista-produtos/lista-produtos.component.html
@@ -5,6 +5,7 @@
             <th>Id</th>
             <th>Nome</th>
             <th>Preço</th>
+            <th>Foto</th>
         </tr>
     </thead>
     <tbody>
@@ -12,6 +13,7 @@
             <td>{{produto.id}}</td>
             <td>{{produto.nome}}</td>
             <td>{{produto.preco | currency:'BRL'}}</td>
+            <td><img [src]="produto.imagem"/></td>
         </tr>      
     </tbody>
 </table>
