--- a/src/app/catalogo/lista-produtos/lista-produtos.component.html
+++ b/src/app/catalogo/lista-produtos/lista-produtos.component.html
@@ -13,7 +13,7 @@
             <td>{{produto.id}}</td>
             <td>{{produto.nome}}</td>
             <td>{{produto.preco | currency:'BRL'}}</td>
-            <td><img [src]="produto.imagem"/></td>
+            <td><img class="thumbnail" [src]="produto.imagem"/></td>
         </tr>      
     </tbody>
 </table>
