--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/']">Home</a></li>                
+                <li><a [routerLink]="['/catalogo/departamentos']">Departamentos</a></li>
                 <li><a [routerLink]="['/catalogo/produtos']">Produtos</a></li>
             </ul>
         </div>
