--- a/src/app/catalogo/lista-produtos/lista-produtos.component.html
+++ b/src/app/catalogo/lista-produtos/lista-produtos.component.html
@@ -10,7 +10,9 @@
             <th>Id</th>
             <th>Nome</th>
             <th>Preço</th>
+            <th>Ativo?</th>
             <th>Foto</th>
+           
         </tr>
     </thead>
     <tbody>
@@ -18,6 +20,7 @@
             <td>{{produto.id}}</td>
             <td>{{produto.nome}}</td>
             <td>{{produto.preco | currency: 'BRL':'symbol'}}</td>
+            <td>{{produto.ativo}}</td>
             <td><img class="thumbnail" [src]="produto.imagem"/></td>
         </tr>      
     </tbody>
