--- a/src/app/catalogo/lista-produtos/lista-produtos.component.html
+++ b/src/app/catalogo/lista-produtos/lista-produtos.component.html
@@ -20,7 +20,7 @@
             <td>{{produto.id}}</td>
             <td>{{produto.nome}}</td>
             <td>{{produto.preco | currency: 'BRL':'symbol'}}</td>
-            <td>{{produto.ativo}}</td>
+            <td><app-iconestatus [status]="produto.ativo"></app-iconestatus></td>
             <td><img class="thumbnail" [src]="produto.imagem"/></td>
         </tr>      
     </tbody>
